src/snapshots/ebnf__parser__test__alternation_precidence.snap
---
source: src/parser.rs
expression: result
---
- "\n             filter ::= 'a' | 'b' 'c';\n        "
- - lhs: filter
    rhs:
      Multiple:
        - Symbol:
            - String: a
            - Alternation
            - String: b
        - String: c

