src/snapshots/ebnf__parser__test__alternation_precidence_group.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= 'a' | ('b' 'c');\n     "
- - lhs: filter
    rhs:
      Symbol:
        - String: a
        - Alternation
        - Group:
            Multiple:
              - String: b
              - String: c

