src/snapshots/ebnf__parser__test__alternation_precidence_multiple.snap
---
source: src/parser.rs
expression: result
---
- "\n             filter ::= 'a' | 'b' | 'c';\n        "
- - lhs: filter
    rhs:
      Symbol:
        - String: a
        - Alternation
        - Symbol:
            - String: b
            - Alternation
            - String: c

