src/snapshots/ebnf__parser__test__alternation_precidence_nested.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= 'a' | 'b'  'c' | 'd';\n     "
- - lhs: filter
    rhs:
      Multiple:
        - Symbol:
            - String: a
            - Alternation
            - String: b
        - Symbol:
            - String: c
            - Alternation
            - String: d

