src/snapshots/ebnf__parser__test__concat_precidence_reverse.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= 'a' , 'b' , 'c' | 'd';\n     "
- - lhs: filter
    rhs:
      Symbol:
        - String: a
        - Concatenation
        - Symbol:
            - String: b
            - Concatenation
            - Symbol:
                - String: c
                - Alternation
                - String: d

